@@ -13,6 +13,8 @@ documents those changes that are of interest to users and admins.
     and DenyUsers.
  -- Fix sched/backfill logic to initiate jobs with maximum time limit over the
     partition limit, but the minimum time limit permits it to start.
+ -- gres/gpu - Fix for gres.conf file with multiple files on a single line
+    using a slurm expression (e.g. "File=/dev/nvidia[0-1]").
 
 * Changes in Slurm 2.6.0pre2
 ============================
